[package]
name = "s502-ln"
version = "0.1.0"
authors = ["Lime <6023821+calime@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.11.4"
clap = "2.33.0"
enum-map = "0.6.2"
lazy_static = "1.4.0"
codespan-reporting = "0.9.3"